examples/manifests/static-site.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: static-site
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: static-site
  template:
    metadata:
      labels:
        app: static-site
    spec:
      # Run on Spot Pods for 60-91% cost savings
      nodeSelector:
        cloud.google.com/gke-spot: "true"
      terminationGracePeriodSeconds: 15
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: static-site
  namespace: default
spec:
  selector:
    app: static-site
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: static-site
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "gce"
    networking.gke.io/managed-certificates: "static-site-cert"
    external-dns.alpha.kubernetes.io/hostname: "demo.yourdomain.com"
spec:
  defaultBackend:
    service:
      name: static-site
      port:
        number: 80
